fix: position close button on mobile

--- a/src/blocks/popup/__close-button/type/popup__close-button_type_delete.css
+++ b/src/blocks/popup/__close-button/type/popup__close-button_type_delete.css
@@ -3,3 +3,10 @@
     left: 420px;
     top: 5px;
 }
+
+@media screen and (max-width: 610px) {
+    .popup__close-button_type_delete {
+        top: 5px;
+        left: 280px;
+    }
+}
